feat: pipes impuros

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -41,4 +41,14 @@
       <p>Texto: {{ numero | triple }}</p>
     </div>
   </section>
+
+  <!-- Pipes Personalizados - impuros -->
+  <section class="section">
+    <h2>Pipes Personlizados - Impuros</h2>
+    <div>
+      <p><strong>Numero aleatório gerado pelo pipe impuro</strong></p>
+      <p>O numero aleatório é: {{ null | random }}</p>
+    </div>
+  </section>
+
 </div>
